@@ -3,6 +3,10 @@ NEWS - OpenPrinting CUPS Filters v1.18.0 - 2017-12-19
 
 CHANGES IN V1.19.0
 
+	- libcupsfilters: Let the PPD generator read out the maximum
+	  of info about color spaces and this way not only reliably
+	  the correct choices are added to the ColorModel option but
+	  also the maximum supported bit depth (8 or 16 bit) is used.
 	- libcupsfilters: Overtaken new features from CUPS' PPD
 	  generator: Presets, Finishing Templates, and extraction of
 	  media sizes from "media-col-database"
